--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+<div th:replace="header"></div>
 <div class="col-md-offset-2" style="margin-top: 72px; margin-left: 384px; margin-bottom: 48px;">
     <h2 style="font-size: 38px;">Register New User</h2>
 </div>
