--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<!--<div th:replace="header"></div>-->
+<div th:replace="header"></div>
 <div class="col-md-offset-2">
 
     <h2>Update Existing User</h2>
