--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-<!--<div th:replace="header"></div>-->
+<div th:replace="header"></div>
 <div class="col-md-offset-2">
     <div>
         <h2>Info about User</h2>
