--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -6,7 +6,7 @@
     <title>List of Users</title>
 </head>
 <body>
-<!--<div th:replace="header"></div>-->
+<div th:replace="header"></div>
 <div class="col-md-offset-2 col-sm-8">
     <h2>List of Users</h2>
     <form th:action="@{/users/create}" method="get">
