--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -16,9 +16,8 @@
     </style>
 </head>
 <body>
-<div th:replace="header"></div>
 <div class="col-md-offset-2" style="margin-top: 72px; margin-left: 384px; margin-bottom: 48px;">
-    <h2 style="font-size: 38px;">Register New User</h2>
+    <h2 style="font-size: 38px;">Create New User</h2>
 </div>
 <form class="form-horizontal" th:action="@{/users/create}" th:object="${user}" method="post" style="margin-left: 384px;">
     <div class="form-group">
@@ -58,6 +57,11 @@
         <input type="reset" class="btn btn" value="Clear"/>
     </div>
     <hr/>
+    <div>
+        <p style="font-size: 16px; margin-left: 80px;">You already have an account?
+            <a th:href="@{/login-form}">Login Now!</a>
+        </p>
+    </div>
 </form>
 </body>
 </html>
