--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -28,9 +28,7 @@
         <tbody>
         <tr th:each="user, iStat: ${users}">
             <th scope="row" th:text="${iStat.index + 1}"/>
-            <td>
-                <a th:href="@{|/users/${user.id}/read|}" th:text="${user.id}"/>
-            </td>
+            <td th:text="${user.id}"/>
             <td>
                 <a th:href="@{|/todos/all/users/${user.id}|}" th:text="${user.firstName + ' ' + user.lastName}"/>
             </td>
